# switchboard

./: .gitignore  .pdm-python  README.md  config.yaml  keycodes.yaml  pyproject.toml
switchboard/: __init__.py  __main__.py  check.py  cli.py  generate.py  validate.py
templates/: build.j2  custom.conf.j2  custom_config.j2  keymap.j2  west.j2
