[project]
name = "switchboard"
version = "0.1.0"
description = "Keyboard firmware config compiler — YAML in, ZMK/QMK out"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "jinja2>=3.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
generate = "python -m switchboard.generate output"
check = "python -m switchboard.check"
